Fix vertical-ryhtm : by default it's better to use rem. Optionnally it's still possible to use em when needed : spacing(2, em)

--- a/minitinytypo/_code.scss
+++ b/minitinytypo/_code.scss
@@ -25,11 +25,11 @@ pre {
 $mtt-kbd-font-size: 0.8em;
 kbd {
   display: inline-block;
-  min-width: calc(#{mtt(spacing)*2} + 2px); // 2 lines + border width
+  min-width: calc(#{spacing(2, em)} + 2px); // 2 lines + border width
   padding:
-    calc(#{mtt(spacing)*3/4} + ((1em - #{$mtt-kbd-font-size}) / 2))
+    calc(#{spacing(3/4, em)} + ((1em - #{$mtt-kbd-font-size}) / 2))
     0.5em
-    calc(#{mtt(spacing)*1/4} + ((1em - #{$mtt-kbd-font-size}) / 2)); // ~2 lines in total
+    calc(#{spacing(1/4, em)} + ((1em - #{$mtt-kbd-font-size}) / 2)); // ~2 lines in total
   font-size: $mtt-kbd-font-size;
   white-space: nowrap;
   text-align: center;
