--- a/minitinytypo/_media.scss
+++ b/minitinytypo/_media.scss
@@ -44,7 +44,7 @@ figure {
 }
 
 figcaption {
-  margin-top: mtt(spacing)/4;
+  margin-top: spacing(1/4);
   font-size: 80%;
 }
   
