--- a/minitinytypo/_tables.scss
+++ b/minitinytypo/_tables.scss
@@ -13,7 +13,7 @@ table {
   caption,
   th,
   td {
-    padding: mtt(spacing)/2;
+    padding: spacing(2);
   }
 
   th {
